@@ -1,4 +1,9 @@
 
+2016-06-01  Edward Hart <edward.dan.hart@gmail.com>
+
+	* parser.y: fixed bug #242 and allowed exception handlers to be in any
+	  order.
+
 2016-05-31 Brian Tiffin <btiffin@gnu.org>
 
 	* typeck.c: fix bug #235 ADD/SUBTRACT CORRESPONDING only for NUMERIC items.
@@ -6,7 +11,7 @@
 2016-05-31  Edward Hart <edward.dan.hart@gmail.com>
 
 	* parser.y: fixed bug #47 - tightened INSPECT syntax rules.
-	
+
 2016-05-22  Edward Hart <edward.dan.hart@gmail.com>
 
 	* tree.c, field.c, codegen.c: replaced PICTURE strings containing packed ints with
